# red_soft

./: README.md  check_arrival.py  pyproject.toml
socket_app/: alembic.ini  client.py  crud.py  fill_db.py  server.py  utils.py
socket_app/orm/: database.py  models.py
socket_app/orm/migrations/: env.py
socket_app/orm/migrations/versions/: 47f4ea21163f_added_users_table.py  ca97d9c095ae_added_users_table.py
socket_app/tests/: conftest.py  test_db.py
