[tool.poetry]
name = "red-soft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "red_soft"}]

[tool.poetry.dependencies]
python = "^3.10"
passlib = "^1.7.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
pytest-sqlalchemy-mock = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
